po: update po/ko_KR/provinces.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ko_KR/provinces.po
+++ b/po/ko_KR/provinces.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-04 05:31+0000\n"
+"PO-Revision-Date: 2016-07-04 05:40+0000\n"
 "Last-Translator: Young Jun Kim <young.j.kim0214@gmail.com>\n"
 "Language-Team: Korean (Korea) (http://www.transifex.com/civicrm/civicrm/language/ko_KR/)\n"
 "MIME-Version: 1.0\n"
@@ -11671,31 +11671,31 @@ msgstr "Škocjan"
 
 msgctxt "province"
 msgid "Škofja Loka"
-msgstr ""
+msgstr "Škofja Loka"
 
 msgctxt "province"
 msgid "Škofljica"
-msgstr ""
+msgstr "Škofljica"
 
 msgctxt "province"
 msgid "Šmarje pri Jelšah"
-msgstr ""
+msgstr "Šmarje pri Jelšah"
 
 msgctxt "province"
 msgid "Šmartno ob Paki"
-msgstr ""
+msgstr "Šmartno ob Paki"
 
 msgctxt "province"
 msgid "Šmartno pri Litiji"
-msgstr ""
+msgstr "Šmartno pri Litiji"
 
 msgctxt "province"
 msgid "Šoštanj"
-msgstr ""
+msgstr "Šoštanj"
 
 msgctxt "province"
 msgid "Štore"
-msgstr ""
+msgstr "Štore"
 
 msgctxt "province"
 msgid "Tabor"
@@ -11703,7 +11703,7 @@ msgstr "Tabor"
 
 msgctxt "province"
 msgid "Tišina"
-msgstr ""
+msgstr "Tišina"
 
 msgctxt "province"
 msgid "Tolmin"
@@ -11711,7 +11711,7 @@ msgstr "Tolmin"
 
 msgctxt "province"
 msgid "Trbovlje"
-msgstr ""
+msgstr "Trbovlje"
 
 msgctxt "province"
 msgid "Trebnje"
@@ -11723,7 +11723,7 @@ msgstr "Trnovska vas"
 
 msgctxt "province"
 msgid "Tržič"
-msgstr ""
+msgstr "Tržič"
 
 msgctxt "province"
 msgid "Trzin"
@@ -11731,7 +11731,7 @@ msgstr "Trzin"
 
 msgctxt "province"
 msgid "Turnišče"
-msgstr ""
+msgstr "Turnišče"
 
 msgctxt "province"
 msgid "Velenje"
@@ -11743,11 +11743,11 @@ msgstr "Velika Polana"
 
 msgctxt "province"
 msgid "Velike Lašče"
-msgstr ""
+msgstr "Velike Lašče"
 
 msgctxt "province"
 msgid "Veržej"
-msgstr ""
+msgstr "Veržej"
 
 msgctxt "province"
 msgid "Videm"
@@ -11783,35 +11783,35 @@ msgstr "Zagorje ob Savi"
 
 msgctxt "province"
 msgid "Zavrč"
-msgstr ""
+msgstr "Zavrč"
 
 msgctxt "province"
 msgid "Zreče"
-msgstr ""
+msgstr "Zreče"
 
 msgctxt "province"
 msgid "Žalec"
-msgstr ""
+msgstr "Žalec"
 
 msgctxt "province"
 msgid "Železniki"
-msgstr ""
+msgstr "Železniki"
 
 msgctxt "province"
 msgid "Žetale"
-msgstr ""
+msgstr "Žetale"
 
 msgctxt "province"
 msgid "Žiri"
-msgstr ""
+msgstr "Žiri"
 
 msgctxt "province"
 msgid "Žirovnica"
-msgstr ""
+msgstr "Žirovnica"
 
 msgctxt "province"
 msgid "Žužemberk"
-msgstr ""
+msgstr "Žužemberk"
 
 msgctxt "province"
 msgid "Banskobystrický kraj"
@@ -15247,488 +15247,488 @@ msgstr "Arica y Parinacota"
 
 msgctxt "province"
 msgid "Kalimantan Tengah"
-msgstr ""
+msgstr "Kalimantan Tengah"
 
 msgctxt "province"
 msgid "Sulawesi Barat"
-msgstr ""
+msgstr "Sulawesi Barat"
 
 msgctxt "province"
 msgid "Kalimantan Utara"
-msgstr ""
+msgstr "Kalimantan Utara"
 
 msgctxt "province"
 msgid "Ankaran"
-msgstr ""
+msgstr "Ankaran"
 
 msgctxt "province"
 msgid "Apače"
-msgstr ""
+msgstr "Apače"
 
 msgctxt "province"
 msgid "Cirkulane"
-msgstr ""
+msgstr "Cirkulane"
 
 msgctxt "province"
 msgid "Gorje"
-msgstr ""
+msgstr "Gorje"
 
 msgctxt "province"
 msgid "Kostanjevica na Krki"
-msgstr ""
+msgstr "Kostanjevica na Krki"
 
 msgctxt "province"
 msgid "Log-Dragomer"
-msgstr ""
+msgstr "Log-Dragomer"
 
 msgctxt "province"
 msgid "Makole"
-msgstr ""
+msgstr "Makole"
 
 msgctxt "province"
 msgid "Mirna"
-msgstr ""
+msgstr "Mirna"
 
 msgctxt "province"
 msgid "Mokronog-Trebelno"
-msgstr ""
+msgstr "Mokronog-Trebelno"
 
 msgctxt "province"
 msgid "Odranci"
-msgstr ""
+msgstr "Odranci"
 
 msgctxt "province"
 msgid "Oplotnica"
-msgstr ""
+msgstr "Oplotnica"
 
 msgctxt "province"
 msgid "Ormož"
-msgstr ""
+msgstr "Ormož"
 
 msgctxt "province"
 msgid "Osilnica"
-msgstr ""
+msgstr "Osilnica"
 
 msgctxt "province"
 msgid "Pesnica"
-msgstr ""
+msgstr "Pesnica"
 
 msgctxt "province"
 msgid "Piran"
-msgstr ""
+msgstr "Piran"
 
 msgctxt "province"
 msgid "Pivka"
-msgstr ""
+msgstr "Pivka"
 
 msgctxt "province"
 msgid "Podčetrtek"
-msgstr ""
+msgstr "Podčetrtek"
 
 msgctxt "province"
 msgid "Podlehnik"
-msgstr ""
+msgstr "Podlehnik"
 
 msgctxt "province"
 msgid "Podvelka"
-msgstr ""
+msgstr "Podvelka"
 
 msgctxt "province"
 msgid "Poljčane"
-msgstr ""
+msgstr "Poljčane"
 
 msgctxt "province"
 msgid "Polzela"
-msgstr ""
+msgstr "Polzela"
 
 msgctxt "province"
 msgid "Postojna"
-msgstr ""
+msgstr "Postojna"
 
 msgctxt "province"
 msgid "Prebold"
-msgstr ""
+msgstr "Prebold"
 
 msgctxt "province"
 msgid "Preddvor"
-msgstr ""
+msgstr "Preddvor"
 
 msgctxt "province"
 msgid "Prevalje"
-msgstr ""
+msgstr "Prevalje"
 
 msgctxt "province"
 msgid "Ptuj"
-msgstr ""
+msgstr "Ptuj"
 
 msgctxt "province"
 msgid "Puconci"
-msgstr ""
+msgstr "Puconci"
 
 msgctxt "province"
 msgid "Rače-Fram"
-msgstr ""
+msgstr "Rače-Fram"
 
 msgctxt "province"
 msgid "Radeče"
-msgstr ""
+msgstr "Radeče"
 
 msgctxt "province"
 msgid "Radenci"
-msgstr ""
+msgstr "Radenci"
 
 msgctxt "province"
 msgid "Radlje ob Dravi"
-msgstr ""
+msgstr "Radlje ob Dravi"
 
 msgctxt "province"
 msgid "Radovljica"
-msgstr ""
+msgstr "Radovljica"
 
 msgctxt "province"
 msgid "Ravne na Koroškem"
-msgstr ""
+msgstr "Ravne na Koroškem"
 
 msgctxt "province"
 msgid "Razkrižje"
-msgstr ""
+msgstr "Razkrižje"
 
 msgctxt "province"
 msgid "Rečica ob Savinji"
-msgstr ""
+msgstr "Rečica ob Savinji"
 
 msgctxt "province"
 msgid "Renče-Vogrsko"
-msgstr ""
+msgstr "Renče-Vogrsko"
 
 msgctxt "province"
 msgid "Ribnica"
-msgstr ""
+msgstr "Ribnica"
 
 msgctxt "province"
 msgid "Ribnica na Pohorju"
-msgstr ""
+msgstr "Ribnica na Pohorju"
 
 msgctxt "province"
 msgid "Rogaška Slatina"
-msgstr ""
+msgstr "Rogaška Slatina"
 
 msgctxt "province"
 msgid "Rogašovci"
-msgstr ""
+msgstr "Rogašovci"
 
 msgctxt "province"
 msgid "Rogatec"
-msgstr ""
+msgstr "Rogatec"
 
 msgctxt "province"
 msgid "Ruše"
-msgstr ""
+msgstr "Ruše"
 
 msgctxt "province"
 msgid "Selnica ob Dravi"
-msgstr ""
+msgstr "Selnica ob Dravi"
 
 msgctxt "province"
 msgid "Semič"
-msgstr ""
+msgstr "Semič"
 
 msgctxt "province"
 msgid "Šentrupert"
-msgstr ""
+msgstr "Šentrupert"
 
 msgctxt "province"
 msgid "Sevnica"
-msgstr ""
+msgstr "Sevnica"
 
 msgctxt "province"
 msgid "Sežana"
-msgstr ""
+msgstr "Sežana"
 
 msgctxt "province"
 msgid "Slovenj Gradec"
-msgstr ""
+msgstr "Slovenj Gradec"
 
 msgctxt "province"
 msgid "Slovenska Bistrica"
-msgstr ""
+msgstr "Slovenska Bistrica"
 
 msgctxt "province"
 msgid "Slovenske Konjice"
-msgstr ""
+msgstr "Slovenske Konjice"
 
 msgctxt "province"
 msgid "Šmarješke Toplice"
-msgstr ""
+msgstr "Šmarješke Toplice"
 
 msgctxt "province"
 msgid "Sodražica"
-msgstr ""
+msgstr "Sodražica"
 
 msgctxt "province"
 msgid "Solčava"
-msgstr ""
+msgstr "Solčava"
 
 msgctxt "province"
 msgid "Središče ob Dravi"
-msgstr ""
+msgstr "Središče ob Dravi"
 
 msgctxt "province"
 msgid "Starše"
-msgstr ""
+msgstr "Starše"
 
 msgctxt "province"
 msgid "Straža"
-msgstr ""
+msgstr "Straža"
 
 msgctxt "province"
 msgid "Sveta Trojica v Slovenskih goricah"
-msgstr ""
+msgstr "Sveta Trojica v Slovenskih goricah"
 
 msgctxt "province"
 msgid "Sveti Jurij v Slovenskih goricah"
-msgstr ""
+msgstr "Sveti Jurij v Slovenskih goricah"
 
 msgctxt "province"
 msgid "Sveti Tomaž"
-msgstr ""
+msgstr "Sveti Tomaž"
 
 msgctxt "province"
 msgid "Vodice"
-msgstr ""
+msgstr "Vodice"
 
 msgctxt "province"
 msgid "Abkhazia"
-msgstr ""
+msgstr "Abkhazia"
 
 msgctxt "province"
 msgid "Adjara"
-msgstr ""
+msgstr "Adjara"
 
 msgctxt "province"
 msgid "Tbilisi"
-msgstr ""
+msgstr "Tbilisi"
 
 msgctxt "province"
 msgid "Guria"
-msgstr ""
+msgstr "Guria"
 
 msgctxt "province"
 msgid "Imereti"
-msgstr ""
+msgstr "Imereti"
 
 msgctxt "province"
 msgid "Kakheti"
-msgstr ""
+msgstr "Kakheti"
 
 msgctxt "province"
 msgid "Kvemo Kartli"
-msgstr ""
+msgstr "Kvemo Kartli"
 
 msgctxt "province"
 msgid "Mtskheta-Mtianeti"
-msgstr ""
+msgstr "Mtskheta-Mtianeti"
 
 msgctxt "province"
 msgid "Racha-Lechkhumi and Kvemo Svaneti"
-msgstr ""
+msgstr "Racha-Lechkhumi and Kvemo Svaneti"
 
 msgctxt "province"
 msgid "Samegrelo-Zemo Svaneti"
-msgstr ""
+msgstr "Samegrelo-Zemo Svaneti"
 
 msgctxt "province"
 msgid "Samtskhe-Javakheti"
-msgstr ""
+msgstr "Samtskhe-Javakheti"
 
 msgctxt "province"
 msgid "Shida Kartli"
-msgstr ""
+msgstr "Shida Kartli"
 
 msgctxt "province"
 msgid "Harjumaa"
-msgstr ""
+msgstr "Harjumaa"
 
 msgctxt "province"
 msgid "Hiiumaa"
-msgstr ""
+msgstr "Hiiumaa"
 
 msgctxt "province"
 msgid "Ida-Virumaa"
-msgstr ""
+msgstr "Ida-Virumaa"
 
 msgctxt "province"
 msgid "Jõgevamaa"
-msgstr ""
+msgstr "Jõgevamaa"
 
 msgctxt "province"
 msgid "Järvamaa"
-msgstr ""
+msgstr "Järvamaa"
 
 msgctxt "province"
 msgid "Läänemaa"
-msgstr ""
+msgstr "Läänemaa"
 
 msgctxt "province"
 msgid "Lääne-Virumaa"
-msgstr ""
+msgstr "Lääne-Virumaa"
 
 msgctxt "province"
 msgid "Põlvamaa"
-msgstr ""
+msgstr "Põlvamaa"
 
 msgctxt "province"
 msgid "Pärnumaa"
-msgstr ""
+msgstr "Pärnumaa"
 
 msgctxt "province"
 msgid "Raplamaa"
-msgstr ""
+msgstr "Raplamaa"
 
 msgctxt "province"
 msgid "Saaremaa"
-msgstr ""
+msgstr "Saaremaa"
 
 msgctxt "province"
 msgid "Tartumaa"
-msgstr ""
+msgstr "Tartumaa"
 
 msgctxt "province"
 msgid "Viljandimaa"
-msgstr ""
+msgstr "Viljandimaa"
 
 msgctxt "province"
 msgid "Võrumaa"
-msgstr ""
+msgstr "Võrumaa"
 
 msgctxt "province"
 msgid "Klaipėdos Apskritis"
-msgstr ""
+msgstr "Klaipėdos Apskritis"
 
 msgctxt "province"
 msgid "Marijampolės Apskritis"
-msgstr ""
+msgstr "Marijampolės Apskritis"
 
 msgctxt "province"
 msgid "Panevėžio Apskritis"
-msgstr ""
+msgstr "Panevėžio Apskritis"
 
 msgctxt "province"
 msgid "Šiaulių Apskritis"
-msgstr ""
+msgstr "Šiaulių Apskritis"
 
 msgctxt "province"
 msgid "Tauragės Apskritis"
-msgstr ""
+msgstr "Tauragės Apskritis"
 
 msgctxt "province"
 msgid "Telšių Apskritis"
-msgstr ""
+msgstr "Telšių Apskritis"
 
 msgctxt "province"
 msgid "Bataan"
-msgstr ""
+msgstr "Bataan"
 
 msgctxt "province"
 msgid "Al Bahah"
-msgstr ""
+msgstr "Al Bahah"
 
 msgctxt "province"
 msgid "Al Hudud Ash Shamaliyah"
-msgstr ""
+msgstr "Al Hudud Ash Shamaliyah"
 
 msgctxt "province"
 msgid "Blekinge län"
-msgstr ""
+msgstr "Blekinge län"
 
 msgctxt "province"
 msgid "Dalarnas län"
-msgstr ""
+msgstr "Dalarnas län"
 
 msgctxt "province"
 msgid "Gotlands län"
-msgstr ""
+msgstr "Gotlands län"
 
 msgctxt "province"
 msgid "Gävleborgs län"
-msgstr ""
+msgstr "Gävleborgs län"
 
 msgctxt "province"
 msgid "Hallands län"
-msgstr ""
+msgstr "Hallands län"
 
 msgctxt "province"
 msgid "Jämtlands län"
-msgstr ""
+msgstr "Jämtlands län"
 
 msgctxt "province"
 msgid "Jönkopings län"
-msgstr ""
+msgstr "Jönkopings län"
 
 msgctxt "province"
 msgid "Kalmar län"
-msgstr ""
+msgstr "Kalmar län"
 
 msgctxt "province"
 msgid "Kronobergs län"
-msgstr ""
+msgstr "Kronobergs län"
 
 msgctxt "province"
 msgid "Norrbottens län"
-msgstr ""
+msgstr "Norrbottens län"
 
 msgctxt "province"
 msgid "Skåne län"
-msgstr ""
+msgstr "Skåne län"
 
 msgctxt "province"
 msgid "Stockholms län"
-msgstr ""
+msgstr "Stockholms län"
 
 msgctxt "province"
 msgid "Södermanlands län"
-msgstr ""
+msgstr "Södermanlands län"
 
 msgctxt "province"
 msgid "Uppsala län"
-msgstr ""
+msgstr "Uppsala län"
 
 msgctxt "province"
 msgid "Värmlands län"
-msgstr ""
+msgstr "Värmlands län"
 
 msgctxt "province"
 msgid "Västerbottens län"
-msgstr ""
+msgstr "Västerbottens län"
 
 msgctxt "province"
 msgid "Västernorrlands län"
-msgstr ""
+msgstr "Västernorrlands län"
 
 msgctxt "province"
 msgid "Västmanlands län"
-msgstr ""
+msgstr "Västmanlands län"
 
 msgctxt "province"
 msgid "Västra Götalands län"
-msgstr ""
+msgstr "Västra Götalands län"
 
 msgctxt "province"
 msgid "Örebro län"
-msgstr ""
+msgstr "Örebro län"
 
 msgctxt "province"
 msgid "Östergötlands län"
-msgstr ""
+msgstr "Östergötlands län"
 
 msgctxt "province"
 msgid "Phuket"
-msgstr ""
+msgstr "Phuket"
 
 msgctxt "province"
 msgid "Northern Ostrobothnia"
-msgstr ""
+msgstr "Northern Ostrobothnia"
 
 msgctxt "province"
 msgid "Telangana"
-msgstr ""
+msgstr "Telangana"
