po: update po/nb_NO/campaign.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nb_NO/campaign.po
+++ b/po/nb_NO/campaign.po
@@ -5,13 +5,13 @@
 # Translators:
 # Lars Åge Kamfjord <lars-transifex@kamfjord.org>, 2016
 # Steinar Sødal <steinar@maf.no>, 2012
-# Steinar Sødal <steinar@maf.no>, 2013,2015
+# Steinar Sødal <steinar@maf.no>, 2013,2015-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-12 10:41+0000\n"
-"Last-Translator: Lars Åge Kamfjord <lars-transifex@kamfjord.org>\n"
+"PO-Revision-Date: 2016-07-04 08:46+0000\n"
+"Last-Translator: Steinar Sødal <steinar@maf.no>\n"
 "Language-Team: Norwegian Bokmål (http://www.transifex.com/civicrm/civicrm/language/nb/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -487,8 +487,8 @@ msgstr "Frigitt"
 #: CRM/Campaign/Form/Task/Release.php
 msgid "1 respondent did not release."
 msgid_plural "%count respondents did not release."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "1 deltager ble ikke frigitt."
+msgstr[1] "%count deltagere ble ikke frigitt."
 
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "Could not find Survey Id."
