--- a/po/nl_NL/drupal-civicrm.po
+++ b/po/nl_NL/drupal-civicrm.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-07-02 17:41+0000\n"
+"PO-Revision-Date: 2016-07-05 01:34+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -1890,7 +1890,7 @@ msgstr "Beschrijving van de groep"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "CiviCRM Tags"
-msgstr "CiviCRM Kenmerken"
+msgstr "CiviCRM-kenmerken (tags)"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Tag ID"
