--- a/po/nb_NO/member.po
+++ b/po/nb_NO/member.po
@@ -11,13 +11,13 @@
 # Stein-Aksel Basma <basma@accelero.no>, 2012
 # Stein-Aksel Basma <stabasm@hotmail.com>, 2011-2013
 # Steinar Sødal <steinar@maf.no>, 2012
-# Steinar Sødal <steinar@maf.no>, 2013,2015
+# Steinar Sødal <steinar@maf.no>, 2013,2015-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-22 11:52+0000\n"
-"Last-Translator: Lars Åge Kamfjord <lars-transifex@kamfjord.org>\n"
+"PO-Revision-Date: 2016-07-04 09:00+0000\n"
+"Last-Translator: Steinar Sødal <steinar@maf.no>\n"
 "Language-Team: Norwegian Bokmål (http://www.transifex.com/civicrm/civicrm/language/nb/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2314,27 +2314,27 @@ msgstr "Medlemsskap gjentagende bidrag"
 
 #: CRM/Member/DAO/MembershipLog.php
 msgid "Membership Log ID"
-msgstr ""
+msgstr "Medlemskap Logg ID"
 
 #: CRM/Member/DAO/MembershipLog.php
 msgid "Membership Log Start Date"
-msgstr ""
+msgstr "Medlemskap Logg Start Dato"
 
 #: CRM/Member/DAO/MembershipLog.php
 msgid "Membership Log End Date"
-msgstr ""
+msgstr "Medlemskap Logg Stopp Dato"
 
 #: CRM/Member/DAO/MembershipLog.php
 msgid "Membership Log modified By"
-msgstr ""
+msgstr "Medlemskap Logg endret av"
 
 #: CRM/Member/DAO/MembershipLog.php
 msgid "Maximum Related Memberships"
-msgstr ""
+msgstr "Maksimum relaterte medlemskap"
 
 #: CRM/Member/Form/Membership.php
 msgid "Record Membership Payment is required when you use a price set."
-msgstr ""
+msgstr "Registrer medlemskapsbetaling er påkrevd når du bruker et prissett."
 
 #: CRM/Member/Form/Membership.php
 msgid ""
@@ -2364,7 +2364,7 @@ msgstr "Gave innsendt av ansatt person med medlemmets kredittkort for fornying"
 #: CRM/Member/Form/Task/Batch.php CRM/Member/Form/Task/PickProfile.php
 #: CRM/Member/Task.php
 msgid "Update multiple memberships"
-msgstr ""
+msgstr "Oppdater flere medlemskap"
 
 #: CRM/Member/Form/Task/Batch.php
 msgid ""
@@ -2389,21 +2389,21 @@ msgstr ""
 
 #: CRM/Member/Task.php
 msgid "Export members"
-msgstr ""
+msgstr "Eksporter medlemmer"
 
 #: CRM/Member/Task.php
 msgid "PDF letters - print for memberships"
-msgstr ""
+msgstr "PDF brev - skriv ut for medlemskap"
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid ""
 "For auto-renewing memberships the emails are sent when each payment is "
 "received"
-msgstr ""
+msgstr "For å auto-forny medlemskap, sendes epostene når hver betaling er mottatt"
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid "Membership Status Is Override?"
-msgstr ""
+msgstr "Medlemsskapsstatus er overstyr?"
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid ""
@@ -2419,4 +2419,4 @@ msgstr ""
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid "Select neither to show all memberships"
-msgstr ""
+msgstr "Velg ingen for å vise alle medlemskap"
