--- a/po/nb_NO/countries.po
+++ b/po/nb_NO/countries.po
@@ -7,13 +7,13 @@
 # Lars Åge Kamfjord <lars-transifex@kamfjord.org>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Steinar Sødal <steinar@maf.no>, 2012
-# Steinar Sødal <steinar@maf.no>, 2013
+# Steinar Sødal <steinar@maf.no>, 2013,2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-08 17:05-0400\n"
-"PO-Revision-Date: 2016-05-12 06:50+0000\n"
-"Last-Translator: Lars Åge Kamfjord <lars-transifex@kamfjord.org>\n"
+"PO-Revision-Date: 2016-07-04 08:45+0000\n"
+"Last-Translator: Steinar Sødal <steinar@maf.no>\n"
 "Language-Team: Norwegian Bokmål (http://www.transifex.com/civicrm/civicrm/language/nb/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1047,4 +1047,4 @@ msgstr "Saint-Barthélemy"
 
 msgctxt "country"
 msgid "Saint Martin (French part)"
-msgstr ""
+msgstr "Saint Martin (French part)"
