--- a/po/nb_NO/provinces.po
+++ b/po/nb_NO/provinces.po
@@ -6,13 +6,13 @@
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Stein-Aksel Basma <stabasm@hotmail.com>, 2011
 # Steinar Sødal <steinar@maf.no>, 2012
-# Steinar Sødal <steinar@maf.no>, 2013,2015
+# Steinar Sødal <steinar@maf.no>, 2013,2015-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-04 08:52+0000\n"
+"Last-Translator: Steinar Sødal <steinar@maf.no>\n"
 "Language-Team: Norwegian Bokmål (http://www.transifex.com/civicrm/civicrm/language/nb/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -15502,236 +15502,236 @@ msgstr "Vodice"
 
 msgctxt "province"
 msgid "Abkhazia"
-msgstr ""
+msgstr "Abkhazia"
 
 msgctxt "province"
 msgid "Adjara"
-msgstr ""
+msgstr "Adjara"
 
 msgctxt "province"
 msgid "Tbilisi"
-msgstr ""
+msgstr "Tbilisi"
 
 msgctxt "province"
 msgid "Guria"
-msgstr ""
+msgstr "Guria"
 
 msgctxt "province"
 msgid "Imereti"
-msgstr ""
+msgstr "Imereti"
 
 msgctxt "province"
 msgid "Kakheti"
-msgstr ""
+msgstr "Kakheti"
 
 msgctxt "province"
 msgid "Kvemo Kartli"
-msgstr ""
+msgstr "Kvemo Kartli"
 
 msgctxt "province"
 msgid "Mtskheta-Mtianeti"
-msgstr ""
+msgstr "Mtskheta-Mtianeti"
 
 msgctxt "province"
 msgid "Racha-Lechkhumi and Kvemo Svaneti"
-msgstr ""
+msgstr "Racha-Lechkhumi and Kvemo Svaneti"
 
 msgctxt "province"
 msgid "Samegrelo-Zemo Svaneti"
-msgstr ""
+msgstr "Samegrelo-Zemo Svaneti"
 
 msgctxt "province"
 msgid "Samtskhe-Javakheti"
-msgstr ""
+msgstr "Samtskhe-Javakheti"
 
 msgctxt "province"
 msgid "Shida Kartli"
-msgstr ""
+msgstr "Shida Kartli"
 
 msgctxt "province"
 msgid "Harjumaa"
-msgstr ""
+msgstr "Harjumaa"
 
 msgctxt "province"
 msgid "Hiiumaa"
-msgstr ""
+msgstr "Hiiumaa"
 
 msgctxt "province"
 msgid "Ida-Virumaa"
-msgstr ""
+msgstr "Ida-Virumaa"
 
 msgctxt "province"
 msgid "Jõgevamaa"
-msgstr ""
+msgstr "Jõgevamaa"
 
 msgctxt "province"
 msgid "Järvamaa"
-msgstr ""
+msgstr "Järvamaa"
 
 msgctxt "province"
 msgid "Läänemaa"
-msgstr ""
+msgstr "Läänemaa"
 
 msgctxt "province"
 msgid "Lääne-Virumaa"
-msgstr ""
+msgstr "Lääne-Virumaa"
 
 msgctxt "province"
 msgid "Põlvamaa"
-msgstr ""
+msgstr "Põlvamaa"
 
 msgctxt "province"
 msgid "Pärnumaa"
-msgstr ""
+msgstr "Pärnumaa"
 
 msgctxt "province"
 msgid "Raplamaa"
-msgstr ""
+msgstr "Raplamaa"
 
 msgctxt "province"
 msgid "Saaremaa"
-msgstr ""
+msgstr "Saaremaa"
 
 msgctxt "province"
 msgid "Tartumaa"
-msgstr ""
+msgstr "Tartumaa"
 
 msgctxt "province"
 msgid "Viljandimaa"
-msgstr ""
+msgstr "Viljandimaa"
 
 msgctxt "province"
 msgid "Võrumaa"
-msgstr ""
+msgstr "Võrumaa"
 
 msgctxt "province"
 msgid "Klaipėdos Apskritis"
-msgstr ""
+msgstr "Klaipėdos Apskritis"
 
 msgctxt "province"
 msgid "Marijampolės Apskritis"
-msgstr ""
+msgstr "Marijampolės Apskritis"
 
 msgctxt "province"
 msgid "Panevėžio Apskritis"
-msgstr ""
+msgstr "Panevėžio Apskritis"
 
 msgctxt "province"
 msgid "Šiaulių Apskritis"
-msgstr ""
+msgstr "Šiaulių Apskritis"
 
 msgctxt "province"
 msgid "Tauragės Apskritis"
-msgstr ""
+msgstr "Tauragės Apskritis"
 
 msgctxt "province"
 msgid "Telšių Apskritis"
-msgstr ""
+msgstr "Telšių Apskritis"
 
 msgctxt "province"
 msgid "Bataan"
-msgstr ""
+msgstr "Bataan"
 
 msgctxt "province"
 msgid "Al Bahah"
-msgstr ""
+msgstr "Al Bahah"
 
 msgctxt "province"
 msgid "Al Hudud Ash Shamaliyah"
-msgstr ""
+msgstr "Al Hudud Ash Shamaliyah"
 
 msgctxt "province"
 msgid "Blekinge län"
-msgstr ""
+msgstr "Blekinge län"
 
 msgctxt "province"
 msgid "Dalarnas län"
-msgstr ""
+msgstr "Dalarnas län"
 
 msgctxt "province"
 msgid "Gotlands län"
-msgstr ""
+msgstr "Gotlands län"
 
 msgctxt "province"
 msgid "Gävleborgs län"
-msgstr ""
+msgstr "Gävleborgs län"
 
 msgctxt "province"
 msgid "Hallands län"
-msgstr ""
+msgstr "Hallands län"
 
 msgctxt "province"
 msgid "Jämtlands län"
-msgstr ""
+msgstr "Jämtlands län"
 
 msgctxt "province"
 msgid "Jönkopings län"
-msgstr ""
+msgstr "Jönkopings län"
 
 msgctxt "province"
 msgid "Kalmar län"
-msgstr ""
+msgstr "Kalmar län"
 
 msgctxt "province"
 msgid "Kronobergs län"
-msgstr ""
+msgstr "Kronobergs län"
 
 msgctxt "province"
 msgid "Norrbottens län"
-msgstr ""
+msgstr "Norrbottens län"
 
 msgctxt "province"
 msgid "Skåne län"
-msgstr ""
+msgstr "Skåne län"
 
 msgctxt "province"
 msgid "Stockholms län"
-msgstr ""
+msgstr "Stockholms län"
 
 msgctxt "province"
 msgid "Södermanlands län"
-msgstr ""
+msgstr "Södermanlands län"
 
 msgctxt "province"
 msgid "Uppsala län"
-msgstr ""
+msgstr "Uppsala län"
 
 msgctxt "province"
 msgid "Värmlands län"
-msgstr ""
+msgstr "Värmlands län"
 
 msgctxt "province"
 msgid "Västerbottens län"
-msgstr ""
+msgstr "Västerbottens län"
 
 msgctxt "province"
 msgid "Västernorrlands län"
-msgstr ""
+msgstr "Västernorrlands län"
 
 msgctxt "province"
 msgid "Västmanlands län"
-msgstr ""
+msgstr "Västmanlands län"
 
 msgctxt "province"
 msgid "Västra Götalands län"
-msgstr ""
+msgstr "Västra Götalands län"
 
 msgctxt "province"
 msgid "Örebro län"
-msgstr ""
+msgstr "Örebro län"
 
 msgctxt "province"
 msgid "Östergötlands län"
-msgstr ""
+msgstr "Östergötlands län"
 
 msgctxt "province"
 msgid "Phuket"
-msgstr ""
+msgstr "Phuket"
 
 msgctxt "province"
 msgid "Northern Ostrobothnia"
-msgstr ""
+msgstr "Northern Ostrobothnia"
 
 msgctxt "province"
 msgid "Telangana"
-msgstr ""
+msgstr "Telangana"
