po: update po/fr_CA/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/mailing.po
+++ b/po/fr_CA/mailing.po
@@ -10,7 +10,7 @@
 # Pierre Mathieu <pierrem7@gmail.com>, 2013-2014
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
-# samuelsov <samuel@koumbit.org>, 2014-2015
+# samuelsov <samuel@koumbit.org>, 2014-2016
 # samuelsov <samuel@koumbit.org>, 2012
 # samuelsov <samuel@koumbit.org>, 2012,2014
 # Stéphane Lussier <stephane@symbiotic.coop>, 2012
@@ -19,8 +19,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-10 16:20+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-05 15:08+0000\n"
+"Last-Translator: samuelsov <samuel@koumbit.org>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -196,7 +196,7 @@ msgstr ""
 #: CRM/Mailing/DAO/Component.php CRM/Mailing/DAO/Mailing.php
 #: templates/CRM/Mailing/Page/Component.tpl
 msgid "Body Text"
-msgstr ""
+msgstr "Contenu"
 
 #: CRM/Mailing/DAO/Component.php
 msgid "Mailing Component is Default?"
@@ -232,11 +232,11 @@ msgstr ""
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing From Name"
-msgstr ""
+msgstr "Nom de l'expédieur"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing From Email"
-msgstr ""
+msgstr "Courriel de l'expediteur"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Replyto Email"
@@ -244,7 +244,7 @@ msgstr "Répondre à"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Body Html"
-msgstr ""
+msgstr "Contenu HTML"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Url Tracking"
@@ -269,7 +269,7 @@ msgstr ""
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Message Template"
-msgstr ""
+msgstr "Modèle de message"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Override Verp"
@@ -1169,11 +1169,11 @@ msgstr ""
 
 #: ang/crmMailing/BlockMailing.html ang/crmMailingAB/BlockMailing.html
 msgid "Save As"
-msgstr ""
+msgstr "Enregistrer sous"
 
 #: ang/crmMailing/BlockMailing.html ang/crmMailingAB/BlockMailing.html
 msgid "Email address"
-msgstr ""
+msgstr "Adresse courriel"
 
 #: ang/crmMailing/BlockMailing.html
 msgid "Unsubscribe Group"
@@ -1185,11 +1185,11 @@ msgstr ""
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Preview as HTML"
-msgstr ""
+msgstr "Aperçu HTML"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Preview as Plain Text"
-msgstr ""
+msgstr "Aperçu texte"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test email to:"
@@ -1201,27 +1201,27 @@ msgstr ""
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test message to %1"
-msgstr ""
+msgstr "Envoyer un courriel test à %1"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test"
-msgstr ""
+msgstr "Envoyer le test"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test email to group:"
-msgstr ""
+msgstr "Envoyer courriel de test au groupe :"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test message to group"
-msgstr ""
+msgstr "Envoyer un courriel test au groupe :"
 
 #: ang/crmMailing/BlockPreview.js
 msgid "Send to %1"
-msgstr ""
+msgstr "Envoyer à %1"
 
 #: ang/crmMailing/BlockPreview.js
 msgid "A test message will be sent to %1 people:"
-msgstr ""
+msgstr "Un message test sera envoyé à %1 personnes :"
 
 #: ang/crmMailing/BlockPreview.js
 msgid "None of the contacts in this group have an email address."
@@ -1242,15 +1242,15 @@ msgstr ""
 #: ang/crmMailing/BlockResponses.html ang/crmMailing/BlockReview.html
 #: ang/crmMailing/EmailAddrCtrl.js ang/crmMailingAB/EditCtrl/report.html
 msgid "Track Replies"
-msgstr ""
+msgstr "Suivi des réponses"
 
 #: ang/crmMailing/BlockResponses.html
 msgid "Auto-Respond to Replies"
-msgstr ""
+msgstr "Répondre automatiquement aux réponses"
 
 #: ang/crmMailing/BlockResponses.html
 msgid "Auto-Respond Message"
-msgstr ""
+msgstr "Message de réponse automatique"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Include:"
@@ -1268,11 +1268,11 @@ msgstr ""
 #: ang/crmMailing/PreviewComponentDialogCtrl.html
 #: ang/crmMailing/PreviewMgr/full.html ang/crmMailingAB/EditCtrl/edit.html
 msgid "Plain Text"
-msgstr ""
+msgstr "Texte simple"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Click Throughs"
-msgstr ""
+msgstr "Clics"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Opens"
@@ -1285,7 +1285,7 @@ msgstr "Réponses"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Auto-Respond"
-msgstr ""
+msgstr "Réponse automatique"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 #: templates/CRM/Mailing/Page/Resubscribe.tpl
@@ -1303,7 +1303,7 @@ msgstr ""
 
 #: ang/crmMailing/BlockSchedule.html
 msgid "Send immediately"
-msgstr ""
+msgstr "Envoyer immédiatement"
 
 #: ang/crmMailing/BlockSchedule.html
 msgid "Send at:"
@@ -1315,11 +1315,11 @@ msgstr ""
 
 #: ang/crmMailing/BlockTracking.html
 msgid "Track Click Throughs"
-msgstr ""
+msgstr "Suivi des clics"
 
 #: ang/crmMailing/BlockTracking.html
 msgid "Track Opens"
-msgstr ""
+msgstr "Suivi des ouvertures"
 
 #: ang/crmMailing/BodyHtml.html ang/crmMailing/BodyText.html
 msgid "Required tokens are missing."
@@ -1335,7 +1335,7 @@ msgstr ""
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 msgid "Define Mailing"
-msgstr ""
+msgstr "Préparation de l'envoi"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1344,7 +1344,7 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Header and Footer"
-msgstr ""
+msgstr "Entête et pied de page"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -1353,11 +1353,11 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Responses"
-msgstr ""
+msgstr "Réponses"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 msgid "Review and Schedule"
-msgstr ""
+msgstr "Révision et envoi"
 
 #: ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/wizard.html
@@ -1399,7 +1399,7 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl.js ang/crmMailingAB/EditCtrl.js
 #: ang/crmMailingAB/WinnerDialogCtrl.js
 msgid "Submitting..."
-msgstr ""
+msgstr "Envoi..."
 
 #: ang/crmMailing/EditRecipCtrl.js
 msgid "(Estimating)"
@@ -1419,7 +1419,7 @@ msgstr "~%1 destinataires"
 
 #: ang/crmMailing/EditRecipCtrl.js ang/crmMailing/services.js
 msgid "Previewing..."
-msgstr ""
+msgstr "Création de l'aperçu..."
 
 #: ang/crmMailing/EditRecipCtrl.js
 msgid "Preview (%1)"
@@ -1467,7 +1467,7 @@ msgstr ""
 msgid ""
 "Alternatively, you may select a header or footer which includes the required"
 " tokens."
-msgstr ""
+msgstr "Alternativement, vous pouvez choisir une en-tête ou pied de page qui contiennent les champs de fusion obligatoires."
 
 #: ang/crmMailing/EmailBodyCtrl.js
 msgid "Required tokens"
@@ -1475,7 +1475,7 @@ msgstr ""
 
 #: ang/crmMailing/MsgTemplateCtrl.js
 msgid "Save Template"
-msgstr ""
+msgstr "Enregistrer le modèle"
 
 #: ang/crmMailing/PreviewComponentCtrl.js
 msgid "Invalid component ID (%1)"
@@ -1507,19 +1507,19 @@ msgstr ""
 
 #: ang/crmMailing/Recipients.html
 msgid "Include Group"
-msgstr ""
+msgstr "Inclure les groupes"
 
 #: ang/crmMailing/Recipients.html
 msgid "Exclude Group"
-msgstr ""
+msgstr "Exclure les groupes"
 
 #: ang/crmMailing/Recipients.html
 msgid "Include Past Recipients From"
-msgstr ""
+msgstr "Inclure les destintaires d'un envoi précédent"
 
 #: ang/crmMailing/Recipients.html
 msgid "Exclude Past Recipients From"
-msgstr ""
+msgstr "Exclure les destinataires d'un envoi précédent"
 
 #: ang/crmMailing/Recipients.js
 msgid ""
@@ -1529,11 +1529,11 @@ msgstr ""
 
 #: ang/crmMailing/SaveMsgTemplateDialogCtrl.html
 msgid "Save the current mailing as a template."
-msgstr ""
+msgstr "Enregistrer le contenu de l'envoi comme modèle."
 
 #: ang/crmMailing/SaveMsgTemplateDialogCtrl.html
 msgid "Update \"%1\""
-msgstr ""
+msgstr "Mettre à jour \"%1\""
 
 #: ang/crmMailing/SaveMsgTemplateDialogCtrl.html
 msgid "Save as:"
@@ -1549,7 +1549,7 @@ msgstr ""
 
 #: ang/crmMailing/services.js
 msgid "Sending..."
-msgstr ""
+msgstr "Envoi en cours..."
 
 #: ang/crmMailing/services.js
 msgid "Unsubscribes"
@@ -1561,7 +1561,7 @@ msgstr ""
 
 #: ang/crmMailing.js ang/crmMailingAB.js
 msgid "Initializing..."
-msgstr ""
+msgstr "Chargement..."
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Template (A)"
@@ -1589,11 +1589,11 @@ msgstr ""
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Subject (A)"
-msgstr ""
+msgstr "Sujet (A)"
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Subject (B)"
-msgstr ""
+msgstr "Sujet (B)"
 
 #: ang/crmMailingAB/BlockSetup.html
 msgid ""
@@ -1648,11 +1648,11 @@ msgstr ""
 
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Preview (A)"
-msgstr ""
+msgstr "Aperçu (A)"
 
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Preview (B)"
-msgstr ""
+msgstr "Aperçu (B)"
 
 #: ang/crmMailingAB/EditCtrl/edit.html
 msgid "Compose (A)"
@@ -2098,7 +2098,7 @@ msgstr "Ces paramètres contrôlent le suivi statistique et les actions à prend
 
 #: templates/CRM/Mailing/Form/Settings.tpl templates/CRM/Mailing/MailingUI.hlp
 msgid "Track the number of times recipients click each link in this mailing."
-msgstr ""
+msgstr "Comptabilise pour chaque lien le nombre de fois où les destinataires ont cliqué dessus."
 
 #: templates/CRM/Mailing/Form/Settings.tpl templates/CRM/Mailing/MailingUI.hlp
 msgid ""
