--- a/po/ca_ES/common-base.po
+++ b/po/ca_ES/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-27 10:32+0000\n"
+"PO-Revision-Date: 2016-07-06 13:45+0000\n"
 "Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -21223,7 +21223,7 @@ msgstr "Dona"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Male"
-msgstr "H0me"
+msgstr "Home"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Transgender"
