--- a/po/es_ES/admin.po
+++ b/po/es_ES/admin.po
@@ -11,14 +11,14 @@
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2014
 # francescbassas <francesc@babu.cat>, 2014-2015
 # Fran Sanchez <fsanchezmac@gmail.com>, 2013
-# ixiam <info@ixiam.com>, 2013,2015
+# ixiam <info@ixiam.com>, 2013,2015-2016
 # ixiam <info@ixiam.com>, 2011
 # ixiam <info@ixiam.com>, 2011,2013
 # ixiam_jose <jrombini@hotmail.com>, 2011
 # ixiam_jose <jrombini@hotmail.com>, 2011
 # Manuel Jesús Rodriguez <mjrodriguezarabi@yahoo.es>, 2013
 # Maria Dolores Vallenilla <mvallenilla@ndi.org>, 2015
-# Marti <m.prat@ixiam.com>, 2014-2015
+# Marti Prat <m.prat@ixiam.com>, 2014-2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # rampmaster <rampmaster@gmail.com>, 2015
 # Rubén rubesaca <rubesaca@gmail.com>, 2011
@@ -30,8 +30,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:37+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-06 14:54+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -278,7 +278,7 @@ msgstr "El nombre de dominio tiene que usar un formato de dominio válido (e.j: 
 
 #: CRM/Admin/Form/MailSettings.php templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Localpart"
-msgstr ""
+msgstr "Parte local"
 
 #: CRM/Admin/Form/MailSettings.php templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Return-Path"
@@ -290,7 +290,7 @@ msgstr "La ruta Path debe de ser una dirección con formato válida de email."
 
 #: CRM/Admin/Form/MailSettings.php templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Server"
-msgstr ""
+msgstr "Servidor"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Bounce Processing"
@@ -1002,11 +1002,11 @@ msgstr "El tipo de relación ha sido guardado."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Send email"
-msgstr ""
+msgstr "Enviar correo electrónico"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Record activity for automated email"
-msgstr ""
+msgstr "Registrar actividad para correos electrónicos automatizados"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Send email or SMS"
@@ -1022,19 +1022,19 @@ msgstr "Enviar a"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "before"
-msgstr ""
+msgstr "antes"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "after"
-msgstr ""
+msgstr "después"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Action Condition"
-msgstr ""
+msgstr "Condición de acción"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Repetition Condition"
-msgstr ""
+msgstr "Condición de repetición"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "From Email"
@@ -1042,7 +1042,7 @@ msgstr "Desde el correo electrónico"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Limit to"
-msgstr ""
+msgstr "Limitar a"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Also include"
@@ -1054,15 +1054,15 @@ msgstr "Limitar o Agregar Destinatarios"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Limit Options"
-msgstr ""
+msgstr "Opciones de limitación"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Recipient Roles"
-msgstr ""
+msgstr "Roles de los destinatarios"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Manual Recipients"
-msgstr ""
+msgstr "Destinatarios manuales"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Please select appropriate value"
@@ -1070,7 +1070,7 @@ msgstr "Por favor, seleccione el valor apropiado"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Subject is a required field."
-msgstr ""
+msgstr "El asunto es un campo obligatorio."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Please select entity value"
@@ -1078,7 +1078,7 @@ msgstr "Por favor, seleccione un valor de entidad"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Absolute date cannot be earlier than the current time."
-msgstr ""
+msgstr "La fecha absoluta no puede ser anterior a la fecha actual."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid ""
@@ -1088,7 +1088,7 @@ msgstr "Si \"También incluir\" o \"Limitar a\" se encuentran seleccionados, deb
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Selected Reminder has been deleted."
-msgstr ""
+msgstr "El recordatorio seleccionado ha sido eliminado."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Your new Reminder titled %1 has been saved."
