--- a/po/fr_CA/drupal-civicrm.po
+++ b/po/fr_CA/drupal-civicrm.po
@@ -9,12 +9,13 @@
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # samuelsov <samuel@koumbit.org>, 2012
 # samuelsov <samuel@koumbit.org>, 2012
+# Stéphane Lussier <stephane@symbiotic.coop>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2015-10-26 16:20+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-07 13:42+0000\n"
+"Last-Translator: Stéphane Lussier <stephane@symbiotic.coop>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -930,7 +931,7 @@ msgstr ""
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Address Name"
-msgstr "Adresse"
+msgstr "Nom du lieu"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Be sure addres name is enabled %link"
