--- a/po/es_ES/contribute.po
+++ b/po/es_ES/contribute.po
@@ -17,6 +17,7 @@
 # Jon Altuna <jonaltuna@msn.com>, 2015
 # Marti Prat <m.prat@ixiam.com>, 2014,2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# Romain Thouvenin <romain.thouvenin@gmail.com>, 2016
 # sluc23 <sluc23@hotmail.com>, 2011
 # sluc23 <sluc23@hotmail.com>, 2011
 # Veruska Perinotto <reaching.out@gmail.com>, 2015
@@ -25,8 +26,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-21 10:47+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2016-07-07 07:39+0000\n"
+"Last-Translator: Romain Thouvenin <romain.thouvenin@gmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2753,11 +2754,11 @@ msgstr ""
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid ""
 "This recurring contribution will be automatically processed every %1 %2s."
-msgstr ""
+msgstr "Esta contribución será procesada de manera automática cada %1 %2(s)."
 
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid "This recurring contribution will be automatically processed every %1."
-msgstr ""
+msgstr "Esta contribución será procesada de manera automática cada %1."
 
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid ""
