--- a/po/fr_CA/common-components.po
+++ b/po/fr_CA/common-components.po
@@ -10,15 +10,17 @@
 # Pierre Mathieu <pierrem7@gmail.com>, 2013-2014
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# samuelsov <samuel@koumbit.org>, 2016
 # samuelsov <samuel@koumbit.org>, 2012
 # samuelsov <samuel@koumbit.org>, 2012
+# Stéphane Lussier <stephane@symbiotic.coop>, 2016
 # AlexHobbit <sysadmin@cdeacf.ca>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:37+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-07 14:07+0000\n"
+"Last-Translator: Stéphane Lussier <stephane@symbiotic.coop>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -220,7 +222,7 @@ msgstr "Téléchargement"
 #: CRM/Admin/Page/MessageTemplates.php ang/crmMailing/BlockMailing.html
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Message Template"
-msgstr ""
+msgstr "Modèle de message"
 
 #: CRM/Admin/Page/Options.php templates/CRM/Admin/Page/APIExplorer.tpl
 #: templates/CRM/Contribute/Form/ContributionView.tpl
@@ -491,7 +493,7 @@ msgstr "Titre du rapport"
 
 #: CRM/Campaign/Form/Survey/TabHeader.php ang/crmMailingAB/ListCtrl.html
 msgid "Results"
-msgstr ""
+msgstr "Résultats"
 
 #: CRM/Campaign/Form/Survey.php CRM/Contribute/Form/ContributionPage.php
 #: CRM/Event/Form/ManageEvent.php
@@ -1082,7 +1084,7 @@ msgstr "Solde dû"
 #: templates/CRM/Contribute/Form/Contribution.tpl
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "loading"
-msgstr ""
+msgstr "En cours de chargement..."
 
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
@@ -1984,7 +1986,7 @@ msgstr "Choisissez le type financier de contribution pour ce paiement."
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 #: ang/crmMailing/BlockMailing.html ang/crmMailingAB/BlockMailing.html
 msgid "Template"
-msgstr ""
+msgstr "Modèle"
 
 #: templates/CRM/Event/Form/ManageEvent/Repeat.tpl
 #: templates/CRM/Event/Page/ManageEvent.tpl templates/CRM/PCP/Page/PCP.tpl
@@ -2125,7 +2127,7 @@ msgstr "État du mailing"
 #: ang/crmMailing/EmailBodyCtrl/tokenAlert.html
 #: ang/crmMailingAB/EditCtrl/report.html CRM/Report/Form/Mailing/Detail.php
 msgid "Opt-out"
-msgstr ""
+msgstr "Exclusion des envois"
 
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: templates/CRM/PCP/Form/Contribute.hlp
@@ -2261,7 +2263,7 @@ msgstr ""
 
 #: CRM/Event/Form/SelfSvcUpdate.php CRM/Report/Form/Case/Demographics.php
 msgid "-select-"
-msgstr ""
+msgstr "-choisir-"
 
 #: CRM/Mailing/DAO/Mailing.php CRM/Report/Form/Mailing/Summary.php
 msgid "Mailing ID"
