--- a/po/fr_CA/event.po
+++ b/po/fr_CA/event.po
@@ -11,12 +11,13 @@
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # samuelsov <samuel@koumbit.org>, 2011-2012
 # Stéphane Lussier <stephane@symbiotic.coop>, 2012-2013
+# Stéphane Lussier <stephane@symbiotic.coop>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-31 16:59+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-07 13:47+0000\n"
+"Last-Translator: Stéphane Lussier <stephane@symbiotic.coop>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -35,7 +36,7 @@ msgstr "Aucun ID de participant trouvé."
 
 #: CRM/Event/BAO/Participant.php
 msgid "This event is full."
-msgstr "Cet événement est complet."
+msgstr "Cet évènement est complet."
 
 #: CRM/Event/BAO/Participant.php
 msgid "- Participant Fields -"
@@ -63,7 +64,7 @@ msgid ""
 "This event currently has the maximum number of participants registered (%1)."
 " However, you can still override this limit and register additional "
 "participants using this form."
-msgstr "L'événement a déjà atteint sa limite de participants pouvant être enregistrés (%1). Cependant, vous pouvez outrepasser cette limite et enregistrer des participants en utilisant ce formulaire."
+msgstr "L'évènement a déjà atteint sa limite de participants pouvant être enregistrés (%1). Cependant, vous pouvez outrepasser cette limite et enregistrer des participants en utilisant ce formulaire."
 
 #: CRM/Event/BAO/Participant.php
 msgid ""
@@ -74,7 +75,7 @@ msgstr "Il y a actuellement %2 personne en attente sur la liste d'attente de cet
 
 #: CRM/Event/BAO/Query.php
 msgid "Include Repeating Events"
-msgstr "Inclure les événements récurrents"
+msgstr "Inclure les évènements récurrents"
 
 #: CRM/Event/BAO/Query.php
 msgid "Participant is a Test"
@@ -86,7 +87,7 @@ msgstr "Montant des frais"
 
 #: CRM/Event/BAO/Query.php
 msgid "Include participants from all events in the %1 series"
-msgstr "Inclure les participants à tous les événements de la série %1"
+msgstr "Inclure les participants à tous les évènements de la série %1"
 
 #: CRM/Event/BAO/Query.php
 msgid "Participant is a Test?"
@@ -138,14 +139,14 @@ msgstr "Le participant %1 est déjà inscrit pour %2 (%3)."
 msgid ""
 "When registering for multiple events all events must use the same payment "
 "processor. "
-msgstr "Lors d'une inscription à plusieurs événements, ceux-ci doivent utiliser la même passerelle de paiement."
+msgstr "Lors d'une inscription à plusieurs évènements, ceux-ci doivent utiliser la même passerelle de paiement."
 
 #: CRM/Event/Cart/Form/Checkout/Payment.php CRM/Event/Form/Registration.php
 msgid ""
 "A payment processor must be selected for this event registration page, or "
 "the event must be configured to give users the option to pay later (contact "
 "the site administrator for assistance)."
-msgstr "Une passerelle de paiement doit être sélectionnée pour cette page d'inscription à un événement ou bien l'événement doit être configuré de façon à permettre aux utilisateurs de payer ultérieurement (contacter l'administrateur du site pour obtenir de l'aide). "
+msgstr "Une passerelle de paiement doit être sélectionnée pour cette page d'inscription à un événement ou bien l'évènement doit être configuré de façon à permettre aux utilisateurs de payer ultérieurement (contacter l'administrateur du site pour obtenir de l'aide). "
 
 #: CRM/Event/Cart/Form/Checkout/Payment.php
 msgid "Payment Completed"
@@ -175,7 +176,7 @@ msgstr "L'institut financier n'a pas retourné d'identifiant de transaction."
 msgid ""
 "There was an error creating a contribution record for your event. Please "
 "report this error to the webmaster. Details: %1"
-msgstr "Une erreur s'est produite lors de la création d'un enregistrement de contribution pour votre événement. Merci d'en informer l'administrateur du site, les informations détaillées sont : %1"
+msgstr "Une erreur s'est produite lors de la création d'un enregistrement de contribution pour votre évènement. Merci d'en informer l'administrateur du site, les informations détaillées sont : %1"
 
 #: CRM/Event/Cart/Page/AddToCart.php CRM/Event/Form/Registration.php
 msgid "You do not have permission to register for this event"
@@ -337,7 +338,7 @@ msgstr "Titre du Modèle d'événement"
 
 #: CRM/Event/DAO/Event.php
 msgid "Created By Contact ID"
-msgstr ""
+msgstr "Créé par le contact ID"
 
 #: CRM/Event/DAO/Event.php
 msgid "Event Created Date"
@@ -3708,15 +3709,15 @@ msgstr ""
 
 #: CRM/Event/Form/SelfSvcTransfer.php
 msgid "To Email"
-msgstr ""
+msgstr "Courriel du destinataire"
 
 #: CRM/Event/Form/SelfSvcTransfer.php
 msgid "To Last Name"
-msgstr ""
+msgstr "Nom de famille du destinataire"
 
 #: CRM/Event/Form/SelfSvcTransfer.php
 msgid "To First Name"
-msgstr ""
+msgstr "Prénom du destinataire"
 
 #: CRM/Event/Form/SelfSvcTransfer.php
 msgid "Transfer Registration"
@@ -3740,7 +3741,7 @@ msgstr ""
 
 #: CRM/Event/Form/SelfSvcTransfer.php CRM/Event/Form/SelfSvcUpdate.php
 msgid "Thanks"
-msgstr ""
+msgstr "Merci"
 
 #: CRM/Event/Form/SelfSvcUpdate.php
 msgid ""
