po: update po/fr_CA/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/admin.po
+++ b/po/fr_CA/admin.po
@@ -16,14 +16,14 @@
 # samuelsov <samuel@koumbit.org>, 2012
 # samuelsov <samuel@koumbit.org>, 2012-2013
 # Stéphane Lussier <stephane@symbiotic.coop>, 2012
-# Stéphane Lussier <stephane@symbiotic.coop>, 2012
+# Stéphane Lussier <stephane@symbiotic.coop>, 2012,2016
 # JeanBlais <velorutioneer@gmail.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-24 18:49+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-07 14:00+0000\n"
+"Last-Translator: Stéphane Lussier <stephane@symbiotic.coop>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -795,7 +795,7 @@ msgstr "Entrées du tableau de bord"
 msgid ""
 "Configure how many events should be shown on the dashboard. This overrides "
 "the default value of 10 entries."
-msgstr ""
+msgstr "Personnaliser le nombre d'évènements à afficher sur le panneau de contrôle. Cette option supplante l'affichage par défaut de 10 items."
 
 #: CRM/Admin/Form/Preferences/Event.php
 msgid "show all"
