--- a/po/fr_FR/mailing.po
+++ b/po/fr_FR/mailing.po
@@ -13,6 +13,7 @@
 # Philippe SAMPONT <PhilippeS@cncd.be>, 2015-2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Quentin Renoux <quentin.renoux.layour@gmail.com>, 2015
+# Romain Thouvenin <romain.thouvenin@gmail.com>, 2016
 # Ash_Crow <sylvainboissel@gmail.com>, 2012
 # tonthon <tonthon21@gmail.com>, 2011
 # Vincent <vincent.primault@gmail.com>, 2011
@@ -21,8 +22,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-02 14:19+0000\n"
-"Last-Translator: Philippe SAMPONT <PhilippeS@cncd.be>\n"
+"PO-Revision-Date: 2016-07-07 07:27+0000\n"
+"Last-Translator: Romain Thouvenin <romain.thouvenin@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1996,7 +1997,7 @@ msgstr "Destinataires supplémentaires du publipostage"
 #: templates/CRM/Mailing/Form/Optout.tpl
 msgid ""
 "You are requesting to opt out this email address from all mailing lists:"
-msgstr ""
+msgstr "Vous souhaitez être désinscrit(e) de toutes les listes de diffusion :"
 
 #: templates/CRM/Mailing/Form/Optout.tpl
 msgid ""
