po: update po/fr_CA/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/mailing.po
+++ b/po/fr_CA/mailing.po
@@ -14,13 +14,13 @@
 # samuelsov <samuel@koumbit.org>, 2012
 # samuelsov <samuel@koumbit.org>, 2012,2014
 # Stéphane Lussier <stephane@symbiotic.coop>, 2012
-# Stéphane Lussier <stephane@symbiotic.coop>, 2012
+# Stéphane Lussier <stephane@symbiotic.coop>, 2012,2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-05 15:08+0000\n"
-"Last-Translator: samuelsov <samuel@koumbit.org>\n"
+"PO-Revision-Date: 2016-07-07 14:04+0000\n"
+"Last-Translator: Stéphane Lussier <stephane@symbiotic.coop>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -906,7 +906,7 @@ msgstr ""
 
 #: CRM/Mailing/Info.php
 msgid "Subscribe/unsubscribe from mailing list group"
-msgstr ""
+msgstr "Modifier son abonnement au groupe de diffusion"
 
 #: CRM/Mailing/Info.php
 msgid "delete in CiviMail"
@@ -1193,7 +1193,7 @@ msgstr "Aperçu texte"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Send test email to:"
-msgstr ""
+msgstr "Envoyer un courriel test à :"
 
 #: ang/crmMailing/BlockPreview.html
 msgid "Test Email"
@@ -1254,11 +1254,11 @@ msgstr "Message de réponse automatique"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Include:"
-msgstr ""
+msgstr "Inclus:"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Exclude:"
-msgstr ""
+msgstr "Exclus:"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailing/EditMailingCtrl/2step.html
 #: ang/crmMailing/EditMailingCtrl/unified.html
@@ -2105,7 +2105,7 @@ msgid ""
 "NOTE: When this feature is enabled, all links in the message body will be "
 "automatically re-written to route through your CiviCRM server prior to "
 "redirecting to the target page."
-msgstr ""
+msgstr "NOTE: Lorsque cette option est activée, tous les liens dans le message seront automatiquement ré-écrits pour être rediriger vers la page de comptage CiviCRM avant d'être redirigé vers la page de destination."
 
 #: templates/CRM/Mailing/Form/Settings.tpl templates/CRM/Mailing/MailingUI.hlp
 msgid ""
@@ -2331,7 +2331,7 @@ msgid ""
 "\"Public Pages\" will make the content of this mailing viewable everyone who"
 " has the permission \"view public CiviMail content\". Note that even people "
 "who did not receive the mailing would be able to find it via search engines."
-msgstr ""
+msgstr "En sélectionnant « pages publiques », les utilisateurs ayant la permission « voir le contenu CiviMail public » pourront consulter une archive de cet envoi massif sur le site web. Notez que les même les personnes qui n'ont pas reçu le message pourront le visualiser en utilisant un moteur de recherche."
 
 #: templates/CRM/Mailing/MailingUI.hlp
 msgid ""
@@ -2601,11 +2601,11 @@ msgstr "Total des ouvertures suivies"
 
 #: ang/crmMailing/BlockReview.html ang/crmMailingAB/EditCtrl/report.html
 msgid "Click-Throughs"
-msgstr ""
+msgstr "Clics"
 
 #: ang/crmMailing/BlockTracking.html
 msgid "Track Click-Throughs"
-msgstr ""
+msgstr "Suivi des clics"
 
 #: ang/crmMailing/EmailBodyCtrl/tokenAlert.html
 msgid ""
@@ -2623,4 +2623,4 @@ msgid ""
 "NOTE: When this feature is enabled, all links in the message body (including"
 " mailtos) will be automatically re-written to route through your CiviCRM "
 "website prior to redirecting to the target page."
-msgstr ""
+msgstr "NOTE: Lorsque cette option est activée, tous les liens dans le message (incluant les liens mailto) seront automatiquement ré-écrits pour être rediriger vers la page de comptage CiviCRM avant d'être redirigé vers la page de destination."
