po: update po/fr_CA/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/common-base.po
+++ b/po/fr_CA/common-base.po
@@ -26,7 +26,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-08 11:10+0000\n"
+"PO-Revision-Date: 2016-07-12 20:01+0000\n"
 "Last-Translator: samuelsov <samuel@koumbit.org>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -13186,7 +13186,7 @@ msgstr ""
 
 #: ang/crmUi.js
 msgid "Are you sure you want to revert this?"
-msgstr ""
+msgstr "Voulez-vous vraiment annuler ?"
 
 #: ang/crmUi.js
 msgid "Revert"
@@ -13747,7 +13747,7 @@ msgstr "Vous pouvez aussi assigner cette activité à quelqu'un. Les activités 
 
 #: templates/CRM/Activity/Form/Activity.tpl
 msgid "Are you sure you want to delete "
-msgstr ""
+msgstr "Êtes-vous sûr de vouloir supprimer ?"
 
 #: templates/CRM/Activity/Form/Activity.tpl
 msgid "Survey Title"
@@ -25009,7 +25009,7 @@ msgstr ""
 
 #: CRM/Contact/Page/DedupeMerge.php
 msgid "Merging Duplicates.."
-msgstr ""
+msgstr "Fusion des doublons..."
 
 #: CRM/Contact/Task.php
 msgid "Group - add contacts"
@@ -25196,11 +25196,11 @@ msgstr ""
 
 #: CRM/Core/DAO/County.php
 msgid "County ID"
-msgstr ""
+msgstr "ID région"
 
 #: CRM/Core/DAO/Discount.php
 msgid "Discount ID"
-msgstr ""
+msgstr "ID du rabais"
 
 #: CRM/Core/DAO/Discount.php
 msgid "Discount Start Date"
@@ -25220,11 +25220,11 @@ msgstr ""
 
 #: CRM/Core/DAO/Log.php
 msgid "Log ID"
-msgstr ""
+msgstr "ID du log"
 
 #: CRM/Core/DAO/Log.php
 msgid "Entity ID "
-msgstr ""
+msgstr "ID de l'entité"
 
 #: CRM/Core/DAO/Managed.php
 msgid "Managed ID"
@@ -25260,7 +25260,7 @@ msgstr ""
 
 #: CRM/Core/DAO/Menu.php
 msgid "Menu ID"
-msgstr ""
+msgstr "ID de menu"
 
 #: CRM/Core/DAO/Menu.php
 msgid "Domain"
@@ -25272,7 +25272,7 @@ msgstr ""
 
 #: CRM/Core/DAO/Menu.php
 msgid "Menu Title"
-msgstr ""
+msgstr "Titre du menu"
 
 #: CRM/Core/DAO/Menu.php
 msgid "Component"
@@ -25280,7 +25280,7 @@ msgstr ""
 
 #: CRM/Core/DAO/Menu.php
 msgid "Public?"
-msgstr ""
+msgstr "Public ?"
 
 #: CRM/Core/DAO/Menu.php
 msgid "Exposed?"
@@ -25344,7 +25344,7 @@ msgstr ""
 
 #: CRM/Core/DAO/PreferencesDate.php
 msgid "Date Preference ID"
-msgstr ""
+msgstr "ID préférence de date"
 
 #: CRM/Core/DAO/PreferencesDate.php
 msgid "Date Preference Name"
@@ -25384,7 +25384,7 @@ msgstr ""
 
 #: CRM/Core/DAO/StateProvince.php
 msgid "State ID"
-msgstr ""
+msgstr "ID état"
 
 #: CRM/Core/DAO/StatusPreference.php
 msgid "Status Preference ID"
@@ -25432,7 +25432,7 @@ msgstr ""
 
 #: CRM/Core/DAO/Worldregion.php
 msgid "World Region ID"
-msgstr ""
+msgstr "ID région du monde"
 
 #: CRM/Core/Error.php
 msgid "Sorry an error occurred"
@@ -25655,7 +25655,7 @@ msgstr "Titre pour les remerciements"
 
 #: CRM/Friend/DAO/Friend.php
 msgid "Thank You Text"
-msgstr ""
+msgstr "Texte de remerciement"
 
 #: CRM/Logging/ReportDetail.php
 msgid "Are you sure you want to revert all changes?"
@@ -25681,15 +25681,15 @@ msgstr ""
 
 #: CRM/UF/Page/Group.php
 msgid "Use - Create Mode"
-msgstr ""
+msgstr "Utiliser - Mode création"
 
 #: CRM/UF/Page/Group.php
 msgid "Use - Edit Mode"
-msgstr ""
+msgstr "Utiliser - Mode édition"
 
 #: CRM/UF/Page/Group.php
 msgid "Use - Listings Mode"
-msgstr ""
+msgstr "Utiliser - Mode liste"
 
 #: CRM/Utils/Check/Component/Case.php
 msgid "Case type \"%1\" has duplicate XML files (\"%2\" and \"%3\")"
@@ -25778,7 +25778,7 @@ msgstr ""
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "Last cron run at %1."
-msgstr ""
+msgstr "Dernier cron executé à %1"
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "No cron runs have been recorded."
@@ -25786,11 +25786,11 @@ msgstr ""
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "Cron Running OK"
-msgstr ""
+msgstr "Cron en cours d'execution"
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "Cron Not Running"
-msgstr ""
+msgstr "Cron - pas en cours d'execution"
 
 #: CRM/Utils/Check/Component/Env.php
 msgid ""
@@ -25804,7 +25804,7 @@ msgstr ""
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "Directory not writable"
-msgstr ""
+msgstr "Répertoire non accessible en écriture"
 
 #: CRM/Utils/Check/Component/Env.php
 msgid ""
@@ -25841,7 +25841,7 @@ msgstr ""
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "CiviCRM Update Available"
-msgstr ""
+msgstr "Mise à jour CiviCRM disponible"
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "New version %1 is available. The site is currently running %2."
@@ -25849,11 +25849,11 @@ msgstr ""
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "CiviCRM Up-to-Date"
-msgstr ""
+msgstr "CiviCRM à jour"
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "CiviCRM version %1 is up-to-date."
-msgstr ""
+msgstr "CiviCRM version %1 est à jour."
 
 #: CRM/Utils/Check/Component/Env.php
 msgid ""
@@ -25879,20 +25879,20 @@ msgstr ""
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "Extensions url missing"
-msgstr ""
+msgstr "URL des extensions non défini"
 
 #: CRM/Utils/Check/Component/Env.php
 msgid ""
 "Not checking remote URL for extensions since ext_repo_url is set to false."
-msgstr ""
+msgstr "ext_repo_url = false - pas de vérification de l'URL distant pour les extensions"
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "Extensions check disabled"
-msgstr ""
+msgstr "Vérification des extensions désactivée"
 
 #: CRM/Utils/Check/Component/Env.php CRM/Utils/HttpClient.php
 msgid "Extension download error"
-msgstr ""
+msgstr "Extension - erreur de téléchargement"
 
 #: CRM/Utils/Check/Component/Env.php
 msgid ""
@@ -25908,7 +25908,7 @@ msgstr ""
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "Failed to read extension (%1). Please refresh the extension list."
-msgstr ""
+msgstr "Impossible de lire l'extension (%1). Veuillez rafraîchir la liste des extensions."
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "%1 extension (%2) is installed but missing files."
